--- a/app/views/hot_jobs/show.html.erb
+++ b/app/views/hot_jobs/show.html.erb
@@ -50,14 +50,14 @@
             </div>
 
             <ul class="job-data clearfix ">
-              <li id="unfavorite-btn" data-toggle="tooltip" data-placement="top" data-original-title="取消收藏" data-url="/course/560/unfavorite" style="display:none;">
+              <li id="unfavorite-btn" data-toggle="tooltip" data-placement="top" data-original-title="取消收藏" data-url="" style="display:none;">
                 <a href="javascript:;" class="color-primary">
                   <p><i class="es-icon es-icon-bookmark"></i></p>
                   <p>已收藏</p>
                 </a>
               </li>
 
-              <li id="favorite-btn" data-toggle="tooltip" data-placement="top" data-original-title="收藏课程" data-url="/course/560/favorite">
+              <li id="favorite-btn" data-toggle="tooltip" data-placement="top" data-original-title="收藏课程" data-url="">
                 <a href="javascript:;">
                   <p><i class="fa fa-bookmark"></i></p>
                   <p>收藏</p>
@@ -76,7 +76,7 @@
             </ul>
             <div class="buy">
               该课程属于
-              <a href="/classroom/2">测试班级</a>
+              <a href="javascript:;">测试班级</a>
               <br>
               请加入后再学习
 
@@ -115,11 +115,11 @@
       <section class="job-content">
         <div class="nav-btn-tab">
           <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active"><a href="/course/560">课程概览</a></li>
+            <li role="presentation" class="active"><a href="javascript:;">课程概览</a></li>
             <li role="presentation">
-              <a href="/course/560/reviews/">评价</a>
+              <a href="javascript:;">评价</a>
             </li>
-            <li role="presentation"><a href="/course/560/notes"> 笔记</a></li>
+            <li role="presentation"><a href="javascript:;"> 笔记</a></li>
           </ul>
         </div>
       </section>
