--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,23 +1,23 @@
 <footer class="site-footer">
   <div class="container clearfix">
     <ul class="list-group">
-      <li><a href="/page/aboutus" target="_blank">关于我们</a></li>
-      <li><a href="/page/aboutus" target="_blank">淘帮忙简介</a></li>
-      <li><a href="/page/aboutus" target="_blank">业务咨询</a></li>
-      <li><a href="/page/aboutus" target="_blank">法律声明</a></li>
-      <li><a href="/page/contactus" target="_blank">服务协议</a></li>
+      <li><a href="/" target="_blank">关于我们</a></li>
+      <li><a href="/" target="_blank">淘帮忙简介</a></li>
+      <li><a href="/" target="_blank">业务咨询</a></li>
+      <li><a href="/" target="_blank">法律声明</a></li>
+      <li><a href="/" target="_blank">服务协议</a></li>
     </ul>
     <ul class="list-group">
-      <li><a href="/page/aboutus" target="_blank">加盟合作</a></li>
-      <li><a href="/page/aboutus" target="_blank">商务合作</a></li>
-      <li><a href="/page/aboutus" target="_blank">网站联盟</a></li>
-      <li><a href="/page/aboutus" target="_blank">友情链接</a></li>
-      <li><a href="/page/contactus" target="_blank">业务资质</a></li>
+      <li><a href="/" target="_blank">加盟合作</a></li>
+      <li><a href="/" target="_blank">商务合作</a></li>
+      <li><a href="/" target="_blank">网站联盟</a></li>
+      <li><a href="/" target="_blank">友情链接</a></li>
+      <li><a href="/" target="_blank">业务资质</a></li>
     </ul>
     <ul class="list-group">
-      <li><a href="/page/aboutus" target="_blank">联系我们</a></li>
-      <li><a href="/page/aboutus" target="_blank">投诉建议</a></li>
-      <li><a href="/page/aboutus" target="_blank" class="join-us">加入淘帮忙</a></li>
+      <li><a href="/" target="_blank">联系我们</a></li>
+      <li><a href="/" target="_blank">投诉建议</a></li>
+      <li><a href="/" target="_blank" class="join-us">加入淘帮忙</a></li>
     </ul>
     <ul class="list-group pull-right">
       <li><span>关注我们</span></li>
