--- a/app/views/layouts/_home_hero_slides.erb
+++ b/app/views/layouts/_home_hero_slides.erb
@@ -17,11 +17,7 @@
         <span class="stats">96,9399</span>
         入驻机构：
         <span class="stats">200</span>
-
-        <button class="join-btn btn">
-          <i class="fa fa-hand-o-right"></i>
-          现在入驻
-        </button>
+        <%= link_to '<i class="fa fa-hand-o-right"></i>现在入驻'.html_safe, new_enterprise_session_path, class: 'join-btn btn' %>
       </div>
     </div>
   </div>
