--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,9 +4,9 @@
     <div class="index-job-header clearfix">
       <h2>热门岗位</h2>
       <ul>
-        <li class="active"><a href="#" title="">最新发布</a></li>
-        <li><a href="#">精品推荐</a></li>
-        <li><a href="#" >热门排行</a></li>
+        <li class="active"><a href="/" title="">最新发布</a></li>
+        <li><a href="/">精品推荐</a></li>
+        <li><a href="/" >热门排行</a></li>
       </ul>
     </div>
     <div class="job-cards">
@@ -15,7 +15,7 @@
           <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="job-card-item">
               <div class="job-img">
-                <a href="/course/561" target="_blank">
+                <a href="/" target="_blank">
                   <%= image_tag "qu.jpg", class: "img-responsive transform" %>
                 </a>
               </div>
@@ -80,7 +80,7 @@
             </div>
             <h2>
               <i>名企优岗</i>
-              <a href="/article-1268.html">万圣节南瓜灯与小鬼魂更配哦</a>
+              <a href="/">万圣节南瓜灯与小鬼魂更配哦</a>
             </h2>
           </div>
           <div class="bottom">
@@ -88,7 +88,7 @@
               <%= image_tag "hot.jpg"%>
             </div>
             <p> 　　大王派我来巡山喽~　　今天阎王不在家，小鬼来当家，　　出去扮人要糖果好嘛好开心。　　今天阎王不在家，群魔来乱舞，　　南瓜、萝卜齐...</p>
-            <a href="/article-1268.html">查看全部&gt;</a>
+            <a href="/">查看全部&gt;</a>
           </div>
         </div>
       <% end %>
