--- a/app/assets/stylesheets/home-hero-slides.scss
+++ b/app/assets/stylesheets/home-hero-slides.scss
@@ -17,13 +17,10 @@
 }
 
 .guarantee {
-  h3 {
-    color: #ffa900;
-    font-size: 18px;
+  img {
     margin-top: 10px;
-  }
-  p {
-    color: #a0a0a0;
+    height: 50px;
+    width: 236px;
   }
   .join-btn {
     background: #fff;
