--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -37,5 +37,9 @@
   </div>
   <div class="container copyright">
     &copy; 2015 淘帮忙版权所有
+    <div class="pull-right">
+      <%= image_tag 'chengxin.jpg' %>
+      <%= image_tag 'kexin.jpg' %>
+    </div>
   </div>
 </footer>
