--- a/app/views/layouts/_home_hero_slides.erb
+++ b/app/views/layouts/_home_hero_slides.erb
@@ -9,8 +9,7 @@
 <div class="guarantee">
   <div class="container">
     <div class="pull-left">
-      <h3>安心保障</h3>
-      <p>上海自贸区人才行业协会旗下 淘帮忙平台<p>
+      <%= image_tag "zizhi.jpg" %>
     </div>
     <div class="pull-right">
       <p>累计招聘：
