--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -163,7 +163,7 @@ a {
     }
     .company-avatar {
       width: 100%;
-      height: 200px;
+      height: 302px;
     }
     &:hover {
       transform: translateY(-5px);
@@ -174,6 +174,12 @@ a {
 
 .unicorn-companies {
   text-align: center;
+  p {
+    color: #E8B753;
+  }
+  img {
+    margin-bottom: 10px;
+  }
   .what-we-do {
     padding: 40px 0;
     background: #ffaf00;
