--- a/app/views/layouts/_site_header.html.erb
+++ b/app/views/layouts/_site_header.html.erb
@@ -19,9 +19,10 @@
       </ul>
     </div>
   </nav>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default site-head">
     <div class="container">
       <div class="navbar-header">
+        <%= image_tag "logo.jpg" %>
       </div>
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">首页</a></li>
