静态文件加载调整

--- a/app/assets/stylesheets/enterprise.css
+++ b/app/assets/stylesheets/enterprise.css
@@ -3,4 +3,6 @@
  *= require admin-lte/bootstrap/css/bootstrap
  *= require font-awesome/css/font-awesome
  *= require ionicons/css/ionicons
+ *= require admin-lte/dist/css/AdminLTE
+ *= require admin-lte/dist/css/skins/skin-blue
  */
