--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <%= stylesheet_link_tag 'application'%>
+  <%= stylesheet_link_tag 'enterprise'%>
+  <%= stylesheet_link_tag params[:controller] %>
+
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -199,6 +202,8 @@ desired effect
 <!-- ./wrapper -->
 <%= render 'shared/admin_lte/common_modal' %>
 <%= javascript_include_tag 'application' %>
+<%= javascript_include_tag 'enterprise' %>
+<%= javascript_include_tag params[:controller] %>
 <!-- Optionally, you can add Slimscroll and FastClick plugins.
      Both of these plugins are recommended to enhance the
      user experience. Slimscroll is required when using the
