--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -11,6 +11,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <%= stylesheet_link_tag 'application'%>
+  <%= stylesheet_link_tag 'user'%>
+  <%= stylesheet_link_tag params[:controller] %>
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -24,4 +26,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <%= yield %>
   <%= render 'layouts/footer' %>
   <%= javascript_include_tag 'application' %>
+  <%= javascript_include_tag 'user' %>
+  <%= javascript_include_tag params[:controller] %>
+  <%= yield :js %>
 </body>
