--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <%= stylesheet_link_tag 'application'%>
   <%= stylesheet_link_tag 'enterprise'%>
-  <%= stylesheet_link_tag params[:controller] %>
+  <%= stylesheet_link_tag params[:controller].gsub('/','_') %>
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -43,7 +43,7 @@ desired effect
 |               | sidebar-mini                            |
 |---------------------------------------------------------|
 -->
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-blue sidebar-mini <%= params[:action] %>" id="<%= params[:controller].gsub('/','-') %>">
 <div class="wrapper">
 
   <!-- Main Header -->
@@ -203,7 +203,7 @@ desired effect
 <%= render 'shared/admin_lte/common_modal' %>
 <%= javascript_include_tag 'application' %>
 <%= javascript_include_tag 'enterprise' %>
-<%= javascript_include_tag params[:controller] %>
+<%= javascript_include_tag params[:controller].gsub('/','_') %>
 <!-- Optionally, you can add Slimscroll and FastClick plugins.
      Both of these plugins are recommended to enhance the
      user experience. Slimscroll is required when using the
