--- a/app/views/song/labors/_labor.html.slim
+++ b/app/views/song/labors/_labor.html.slim
@@ -6,12 +6,14 @@ tr id="labor-#{labor.id}"
   td = labor.aasm.human_state
   td
     .btn-group
-			= link_to '详情', [:song, labor],remote: true, class: 'btn btn-primary'
-			button.btn.btn-primary.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" type="button"
-				span.caret
-				span.sr-only Toggle Dropdown
-			ul.dropdown-menu
-				li
-					= link_to '修改', edit_song_labor_path(labor),remote: true
-				li
-					= link_to '删除', [:song, labor],remote: true, data: {:confirm => 'Are you sure?'}, :method => :delete
+      = link_to '详情', [:song, labor],remote: true, class: 'btn btn-primary'
+      button.btn.btn-primary.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" type="button"
+        span.caret
+        span.sr-only Toggle Dropdown
+      ul.dropdown-menu
+        li
+          = link_to '帮Ta报名', song_jobs_path(labor: labor)
+        li
+          = link_to '修改', edit_song_labor_path(labor),remote: true
+        li
+          = link_to '删除', [:song, labor],remote: true, data: {:confirm => 'Are you sure?'}, :method => :delete
